@@ -20,6 +20,7 @@
 
 <ul>
  <li> New <tt>skalibs/gol.h</tt> header, implementing long options. </li>
+ <li> New <tt>mkptemp3()</tt> function. </li>
 </ul>
 
 <h2> in 2.14.1.1 </h2>
