@@ -43,6 +43,7 @@ extern int mkfiletemp (char *, create_func_ref, mode_t, void *) ;
 extern int mklinktemp (char const *, char *, link_func_ref) ;
 extern int mkptemp (char *) ;
 extern int mkptemp2 (char *, unsigned int) ;
+extern int mkptemp3 (char *, mode_t, unsigned int) ;
 extern int mkltemp (char const *, char *) ;
 extern int mkhtemp (char const *, char *) ;
 extern int mkctemp (char *, mode_t, dev_t) ;
